# city-builder

./: .gitignore  Cargo.toml  concept.md  dbg.rdbg  imgui.ini  renderdoc-session.cap
assets/meshes/: GartenFarbig.gltf  firetruck.gltf
assets/shaders/: simple.frag  simple.pipe  simple.vert  solid.frag  solid.pipe  solid.vert  triangle.frag  triangle.vert  ui.frag  ui.vert
concepts/: renderer.md  workspace.md
crates/app/: Cargo.toml
crates/app/src/: event.rs  lib.rs  stages.rs  timing.rs
crates/artisan/: Cargo.toml
crates/artisan/src/: camera.rs  components.rs  def.rs  factory.rs  lib.rs  material.rs  mesh.rs  pipelines.rs  renderer.rs  shader_assets.rs
crates/assets/: Cargo.toml
crates/assets/src/: asset.rs  asset_descendant.rs  asset_server.rs  assets.rs  channels.rs  def.rs  events.rs  file_spy.rs  handle.rs  lib.rs  loader.rs  path.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  profiler.rs
crates/ecs/: Cargo.toml
crates/ecs/src/: into_system.rs  lib.rs  resources.rs  system.rs
crates/ecs/src/resource/: resource_query.rs  resources.rs
crates/ecs/src/schedule/: executor.rs  mod.rs  scheduler.rs
crates/ecs/src/system/: into_system.rs  mod.rs  system.rs
crates/gfx/: Cargo.toml
crates/gfx/src/: command.rs  context.rs  context_builder.rs  gfx_command.rs  gfx_context.rs  heapy.rs  lib.rs  memory_page.rs  plumber.rs  pool.rs  swapper.rs
crates/gfx/src/compat/: from_hal.rs  to_hal.rs
crates/gfx/src/graph/: attachment.rs  builder.rs  mod.rs  nodes.rs
crates/legacy-code/src/: camera.rs  main.rs
crates/legacy-code/src/graphics/: mod.rs
crates/legacy-code/src/graphics/context/: gfx_render_context.rs  mod.rs  render_context.rs
crates/legacy-code/src/graphics/render_graph/: graph.rs
crates/legacy-code/src/graphics/renderer/: ui.rs  vertex.rs
crates/models/: Cargo.toml
crates/models/src/: factory.rs  lib.rs  loader.rs
crates/render/: Cargo.toml
crates/render/src/: command_encoder.rs  context.rs  context_builder.rs  gpu_resources.rs  lib.rs  replay.rs  resources.rs  test_renderer.rs  test_setup.rs
crates/render/src/context/: gfx_context.rs  mod.rs  types.rs
crates/render/src/gfx/: compat.rs  gfx_command.rs  gfx_context.rs  heapy.rs  memory_page.rs  mod.rs  plumber.rs  pool.rs  swapper.rs
crates/render/src/gfx/compat/: from_hal.rs  mod.rs  to_hal.rs
crates/render/src/graph/: attachment.rs  builder.rs  graph.rs  mod.rs  node.rs
crates/render/src/graph/nodes/: callbacks.rs  mod.rs  pass.rs
crates/render/src/resource/: buffer.rs  frame.rs  glue.rs  mod.rs  pipeline.rs  render_pass.rs  swap_buffer.rs
crates/render/src/util/: format.rs  mixture.rs  mod.rs
crates/tasks/: Cargo.toml
crates/tasks/examples/: sandbox.rs
crates/tasks/src/: lib.rs  task.rs  task_pool.rs  utilities.rs
crates/window/: Cargo.toml
crates/window/src/: events.rs  input.rs  lib.rs
src/: camera.rs  log.rs  logger.rs  main.rs  window.rs  world.rs
src/graphics/: mod.rs
src/graphics/context/: gfx_render_context.rs  handle.rs  mod.rs  render_context.rs
src/graphics/render_graph/: graph.rs
src/graphics/renderer/: mod.rs  shaders.rs  ui.rs
src/renderer/: mod.rs  shaders.rs  ui.rs  vertex.rs
src/shaders/: triangle.frag
