[package]
name = "city-builder"
version = "0.1.0"
authors = ["Luca Fanselau <luca.fanselau@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/ecs", "crates/render"]

[dependencies]
winit = "0.22.1"
log = "0.4.11"
simplelog = "0.7.6"
gfx-hal = "0.5"
# First we will just stick to vulkan so
gfx-backend-vulkan = "0.5"
arrayvec = "0.5.1"
shaderc = "0.6.2"
notify = "4.0.15"
serde = { version = "1.0.110", features = ["derive"] }
bincode = "1.2.1"
nalgebra-glm = "0.7.0"
owning_ref =  "0.4.1"
uuid = { version = "0.8", features = ["v4"] }
anyhow = "1.0.32"
thiserror = "1.0.20"

ecs = { path = "crates/ecs" }
render = { path = "crates/render" }

# IMGUI
imgui = "0.4.0"
imgui-winit-support = "0.4.0"
# pbly never going to use this:
# imgui_gfx_hal = "0.1.2"
