[package]
name = "city-builder"
version = "0.1.0"
authors = ["Luca Fanselau <luca.fanselau@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/core", "crates/ecs", "crates/render", "crates/app", "crates/gfx", "crates/window", "crates/artisan", "crates/tasks", "crates/assets", "crates/models"]

[dependencies]
log = "0.4.11"
simplelog = "0.9.0" #{ path = "../simplelog.rs" }
noise = "0.7.0"

app = { path = "crates/app" }
artisan = { path = "crates/artisan" }
models = { path = "crates/models" }
window = { path = "crates/window" }
tasks = { path = "crates/tasks" }
