[package]
name = "assets"
version = "0.1.0"
authors = ["Luca Fanselau <luca.fanselau@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
ecs = { path  = "../ecs" }
tasks = { path = "../tasks" }

dashmap = "4.0.2"
async-channel = "1.6.1"
log = "0.4.14"
hash_hasher = "2.0.3"
downcast-rs = "1.2.0"
notify = "5.0.0-pre.6"
