[package]
name = "core"
version = "0.1.0"
authors = ["Luca Fanselau <luca.fanselau@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
lazy_static= "1.4.0"
anyhow = "1.0.39"
thiserror = "1.0.24"

# cli-table = "0.4"
