[package]
name = "gfx"
version = "0.1.0"
authors = ["Luca Fanselau <luca.fanselau@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
core = { path = "../core" }
app = { path = "../app" }
render = { path = "../render" }
window = { path = "../window" }
generational-arena = "0.2.8"
raw-window-handle = "0.3.3"
gfx-hal = "0.6.0"
parking_lot = "0.11.0"
thiserror = "1.0.20"
anyhow = "1.0.33"
bytemuck = { version =  "1.4.1", features = ["derive"] }

# I really dont want to add shaderc, but because of a lack of better alternatives, here we go
shaderc = "0.7.0"

[dependencies.gfx-backend-vulkan]
version = "0.6.5"
features = ["x11"]
