[package]
name = "models"
version = "0.1.0"
authors = ["Luca Fanselau <luca.fanselau@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artisan = { path = "../artisan" }
app = { path = "../app" }
core = { path = "../core" }
render = { path = "../render" }
tasks = { path = "../tasks" }

gltf = "0.15.2"
base64 = "0.13.0"
