[package]
name = "render"
version = "0.2.0"
authors = ["Luca Fanselau <luca.fanselau@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
app = { path = "../app" }
generational-arena = "0.2.8"
parking_lot = "0.11.0"
thiserror = "1.0.20"
anyhow = "1.0.33"
bytemuck = { version =  "1.4.1", features = ["derive"] }
