[package]
name = "render"
version = "0.2.0"
authors = ["Luca Fanselau <luca.fanselau@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
app = { path = "../app" }
parking_lot = "0.11.0"
bytemuck = { version =  "1.4.1", features = ["derive"] }
raw-window-handle = "0.3.3"
# Currently only used for graph attachments
uuid = { version = "0.8.2", features = ["v4"] }
