[package]
name = "tasks"
version = "0.1.0"
authors = ["Luca Fanselau <luca.fanselau@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-executor = "1.4"
async-channel = "1.6.1"
crossbeam-channel = "0.5.0"
parking_lot = "0.11.1"
async-lock = "2.3.0"
futures-lite = "1.11.3"
num_cpus = "1.13.0"
log = "0.4.14"
async-std = { version = "1.9", features = ["unstable"] }
